tests/jtrrouter/errors/default_departlane_false/errors.jtrrouter
Error: Invalid departLane definition for option 'departlane';
 must be one of ("random", "free", "allowed", "best", "best_prob", "first", or an int>=0)
Quitting (on error).
